--- a/css/home.css
+++ b/css/home.css
@@ -4,3 +4,6 @@
   background-image: linear-gradient(#1E90FF, #0000CD);
 }
 
+.body {
+  background-image: url('img/background/kinda forested ngl.jpeg');
+}
