--- a/css/home.css
+++ b/css/home.css
@@ -5,5 +5,5 @@
 }
 
 .body {
-  background-image: url('img/background/kinda forested ngl.jpeg');
+  background-image: url('/img/background/forest.jpeg');
 }
