--- a/css/home.css
+++ b/css/home.css
@@ -4,6 +4,12 @@
   background-image: linear-gradient(#1E90FF, #0000CD);
 }
 
-body {
+/* body {
   background-image: url('/img/background/forest.jpeg');
+} */
+
+.primary {
+  height: 300px;
+  width: 600px;
+  background-color: lightblue;
 }
